name:                cgclean
version:             0.1.0.0
synopsis:            Tools for cleaning CG grammars
-- description:
homepage:            https://github.com/inariksit/cgclean#readme
-- license:             
license-file:        LICENSE
author:              Inari Listenmaa
maintainer:          inari@chalmers.se
copyright:           
category:            Natural Language Processing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10



library
  hs-source-dirs:      src
  exposed-modules:     Clean
  build-depends:       base
                     , cghs
                     , cgsat
                     , filepath
  default-language:    Haskell2010

executable cg-clean
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cgclean
  default-language:    Haskell2010

test-suite cgclean-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cgclean
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/inariksit/cgclean
